--- a/NomeMesa.html
+++ b/NomeMesa.html
@@ -5,16 +5,33 @@
     <link rel="stylesheet" href="nomemesa.css" type="text/css">
   </head>
   <body>
+
+
     <div class="container">
-      <header class="profile-header">
+      <header>
+        <ul>
+          <li><a href="#">Configurações</a></li>
+          <li><a href="#">Notificações</a></li>
+          <li><a href="#">Perfil</a></li>
+          <li><a href="#">Criar mesa</a></li>
+        </ul>
+      </header>
+
+      <nav class="profile-header">
         <h2>Nome da mesa</h2>
         <img src="https://via.placeholder.com/350" alt="Imagem da mesa">  
-      </header>
+      </nav>
+
       <section class="profile-stats">
-        <p>Mestre</p>
-        <p>Horário</p>
-        <p>Descrição da mesa:</p>
-        <p>Vagas</p>
+
+        <ul>
+          <li><img src="https://via.placeholder.com/30" alt="Foto de perfil"><p>Mestre</p></li>
+          <li> <img src="https://via.placeholder.com/30" alt="Foto de perfil"><p>Horário</p></li>
+          <li><img src="https://via.placeholder.com/30" alt="Foto de perfil"><p>Descrição da mesa:</p></li>
+          <li><img src="https://via.placeholder.com/30" alt="Foto de perfil"><p>Vagas</p></li>    
+        </ul>
+        
+
       </section>
       
 
