--- a/NomeMesa.html
+++ b/NomeMesa.html
@@ -2,11 +2,9 @@
 <html>
   <head>
     <title>Mesa</title>
-    <link rel="stylesheet" href="nomemesa.css" type="text/css">
+    <link rel="stylesheet" href="Nomemesa.css" type="text/css">
   </head>
   <body>
-
-
     <div class="container">
       <header>
         <ul>
